--- a/src/app.css
+++ b/src/app.css
@@ -1,4 +1,4 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
+/* @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 
 .bi{
     font-size: 2rem;
@@ -7,4 +7,4 @@
 .zback{
     z-index: -1;
     position:absolute;
-}
+} */
