--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,22 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 
 @font-face {
+    font-family: RobotoRegular;
+    src: local("RobotoRegular"), url('./fonts/Roboto-Regular.ttf') format('truetype');
+}
+
+@font-face {
     font-family: TypeThis;
     src: local("TypeThis"), url("./fonts/TypeThisFamosaHeavy.otf") format('opentype');
     font-weight: medium;
+}
+
+html {
+    scroll-padding-top: 3.5rem;
+}
+
+h3{
+    font-family: "RobotoRegular";
 }
 
 #title{
@@ -19,6 +32,13 @@
 }
 
 .zback{
+    position:fixed;
     z-index: -1;
-    position:absolute;
+}
+
+a.anchor {
+    /* display: block;
+    position: relative; */
+    top: -250px;
+    /* visibility: hidden; */
 }
