--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
 
 @font-face {
-    font-family: RobotoRegular;
-    src: local("RobotoRegular"), url('./fonts/Roboto-Regular.ttf') format('truetype');
+    font-family: Questral;
+    src: local("Questral"), url('./fonts/Questrial-Regular.ttf') format('truetype');
 }
 
 @font-face {
@@ -15,8 +15,8 @@ html {
     scroll-padding-top: 3.5rem;
 }
 
-h3{
-    font-family: "RobotoRegular";
+h1, h2, h3, h4, h5, h6, p{
+    font-family: "Questral";
 }
 
 #title{
@@ -27,8 +27,12 @@ h3{
     -webkit-text-fill-color: transparent;
 }
 
+.header-height{
+    min-height: 25vh;
+}
+
 .page-height{
-    min-height: 100vh;
+    min-height: 75vh;
 }
 
 .navi{
@@ -55,4 +59,15 @@ a.anchor {
     position: relative; */
     top: -250px;
     /* visibility: hidden; */
+}
+
+.transitional {
+    animation-delay: 1s;
+    transition: opacity 1s;
+    opacity: 1;
+}
+.transitional.hide{
+    opacity: 0;
+    pointer-events: none;
+    height:0;
 }
