project filters added

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,6 +1,7 @@
 // @import “../node_modules/bootstrap/scss/bootstrap.scss”;
 
 $primary: #0000ff;
+$secondary: #2469c3;
 $light: #E8D8F0;
 // $white: #E8D8F0;
 $body-bg: #DECDEB;
