--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css");
+@import '~mdb-ui-kit/css/mdb.min.css';
 
 @font-face {
     font-family: Questral;
@@ -33,7 +34,7 @@ h1, h2, h3, h4, h5, h6, p{
 }
 
 .page-height{
-    /* min-height: 75vh; */
+    /* max-width: 50%; */
 }
 
 .navi{
@@ -84,4 +85,38 @@ a.anchor {
 img{
     overflow:hidden;
     width:100%;
+}
+
+.project{
+    position: relative;
+    background-image: linear-gradient(to bottom,#91a6c1,#DECDEB 100%);
+    z-index: 1;
+}
+
+.project::before{
+    position: absolute;
+  content: "";
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(to bottom,#808080,#a0a0a0);
+  z-index: -1;
+  transition: opacity .5s;
+  opacity: 0;
+}
+
+.project:hover::before{
+    opacity: 1;
+}
+
+.project .img-project{
+    transition: filter .5s;
+    mix-blend-mode:overlay;
+    filter:grayscale(1) brightness(.75);
+}
+
+.project:hover .img-project{
+    transition: filter .25s;
+    filter:grayscale(0) brightness(1);
 }
