--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,6 +1,6 @@
 // @import “../node_modules/bootstrap/scss/bootstrap.scss”;
 
-$primary: #0000ff;
+$primary: #18a2ff;
 $secondary: #2469c3;
 $light: #E8D8F0;
 // $white: #E8D8F0;
