--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ a.anchor {
 
 img{
     overflow:hidden;
-    width:100%;
+    /* width:100%; */
 }
 
 .project{
@@ -119,4 +119,8 @@ img{
 .project:hover .img-project{
     transition: filter .25s;
     filter:grayscale(0) brightness(1);
+}
+
+.highlight{
+    color:#DA5B77;
 }
