--- a/src/custom.scss
+++ b/src/custom.scss
@@ -9,6 +9,7 @@ $light: #E8D8F0;
 $body-bg: #DECDEB;
 // $black: #ff0037;
 $body-color: #73414C;
+$something: #43374d;
 
   
   @import "../node_modules/bootstrap/scss/bootstrap.scss";
