adjusted projects image color

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,7 +1,7 @@
 // @import “../node_modules/bootstrap/scss/bootstrap.scss”;
 
 $primary: #18a2ff;
-$secondary: #2469c3;
+$secondary: #9285b6;
 $warning: #a85353;
 $highlight: #f2ff00;
 $light: #E8D8F0;
