further color adjustments

--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ img{
 .project{
     position: relative;
     /* background-image: linear-gradient(to bottom,#464bd0,#464bd0 100%); */
-    background: #9285b6;
+    background: #5887a7;
     z-index: 1;
 }
 
