--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,10 +1,10 @@
 // @import “../node_modules/bootstrap/scss/bootstrap.scss”;
 
-$primary: #18a2ff;
-$secondary: #9285b6;
+$primary: #185fd1;
+$secondary: #528fb7;
 $warning: #a85353;
 $highlight: #f2ff00;
-$light: #E8D8F0;
+$light: #f1ebf3;
 // $white: #E8D8F0;
 $body-bg: #DECDEB;
 // $black: #ff0037;
